# feather-protocol

./: Cargo.toml
codegen/: Cargo.toml  build.rs
codegen-proc/: Cargo.toml
codegen-proc/src/: lib.rs
codegen/src/: generation.rs  lib.rs
codegen/tests/: player_info_packet.ron  temp.rs  test.rs
extractor/: Cargo.toml
extractor/src/: lib.rs  main.rs
protocols/: 1.15.2.ron
spec/: Cargo.toml
spec/src/: custom_type.rs  lib.rs  main.rs  primitives.rs  validation.rs
src/: codec.rs  lib.rs  packet.rs  types.rs
src/network/: codec.rs  mod.rs
src/packets/: packet.rs
