[package]
name = "feather-protocol"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
thiserror = "1.0"
anyhow = "1.0"
uuid = "0.8"
hematite-nbt = "0.4"
feather-protocol-codegen = { path = "./codegen" }
serde = "1.0"

[workspace]
members = [".", "codegen", "spec", "extractor"]
