[package]
name = "feather-protocol"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
thiserror = "1.0"
anyhow = "1.0"
uuid = "0.8"
hematite-nbt = "0.4"
feather-protocol-codegen-proc = { path = "./codegen-proc" }
serde = "1.0"
bitflags = "1.2"

[workspace]
members = [".", "codegen", "codegen-proc", "spec", "extractor"]
