[package]
name = "feather-protocol-extractor"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"
indexmap = { version = "1.3", features = ["serde-1"] } 
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
parse_wiki_text = "0.1.5"
feather-protocol-spec = { path = "../spec" }