[package]
name = "feather-protocol-spec"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = { git = "https://github.com/halvnykterist/ron"}
indexmap = { version = "1.3", features = ["serde-1"] } 